2012-02-19  Sergei Gavrikov  <sergei.gavrikov@gmail.com>

	* src/common/vsnprintf.c: If string truncated (C99 case), apply the
	null termination in correct place.
	* tests/sprintf2.c: Fix checks for return values if C99 implementation
	snprintf() used.

2009-08-20  Uwe Kindler  <uwe_kindler@web.de>

	* cdl/stdio.cdl Added option CYGIMP_LIBC_STDIO_C99_SNPRINTF
	for activation of C99 compliant snprintf() return value.
	* src/output/vfnprintf.cxx: Added optional C99 compliant return
	value calculation.
	* tests/snprintf.c: New test for snprintf including C99
	implementation.

2009-08-07  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/common/vsnprintf.cxx (class Cyg_VsnprintfStream):
	Remove destructor.
	(vsnprintf): Apply null terminator correctly when truncated.

2009-02-16  Lars Povlsen  <lpovlsen@vitesse.com>

	* include/stdio.h: Removed extra semicolon after scanf()
	prototype.

2009-01-18  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/common/fflush.cxx (cyg_libc_stdio_flush_all_but): Fix silly
	typo in last change.

2009-01-15  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/common/fflush.cxx (cyg_libc_stdio_flush_all_but): Ensure the
	files table can't change. Thanks to Xiaochen Zhou for the detective
	work.

2008-07-21  Guenter Ebermann  <guenter.ebermann@gmx.at>

	* src/common/fclose.cxx (fclose): Replace config-dependent use of
	delete with free(), as the memory had been allocated with malloc.

2007-07-02  Gary Thomas  <gary@mlbassoc.com>

	* src/output/vfnprintf.cxx: Add (char *) casts to make GCC/4.2.x happy.

2007-02-05  Sergei Organov  <osv@javad.com>

	* src/output/vfnprintf.cxx (vfnprintf): while formatting integers
	in decimal, convert the value to unsigned long from unsigned long
	long before processing, unless we actually print long long
	argument. This tremendously speeds-up the formatting.

2007-01-16  Sergei Organov  <osv@javad.com>

	Speed-up [v]s[n]printf() functions by a factor of about 2+. In