@@ -1,3 +1,8 @@
+2014-07-03  John Dallaway  <john@dallaway.org.uk>
+
+	* src/common/sprintf.cxx (__sprintf_chk): Implement alias for use
+	with libsupc++ in fortified linux distributions. [ Bugzilla 1001139 ]
+
 2012-02-19  Sergei Gavrikov  <sergei.gavrikov@gmail.com>
 
 	* src/common/vsnprintf.c: If string truncated (C99 case), apply the
@@ -7,7 +12,7 @@
 
 2009-08-20  Uwe Kindler  <uwe_kindler@web.de>
 
-	* cdl/stdio.cdl Added option CYGIMP_LIBC_STDIO_C99_SNPRINTF
+	* cdl/stdio.cdl: Added option CYGIMP_LIBC_STDIO_C99_SNPRINTF
 	for activation of C99 compliant snprintf() return value.
 	* src/output/vfnprintf.cxx: Added optional C99 compliant return
 	value calculation.
@@ -580,7 +585,7 @@
 // ####GPLCOPYRIGHTBEGIN####                                                
 // -------------------------------------------                              
 // This file is part of eCos, the Embedded Configurable Operating System.   
-// Copyright (C) 1998, 1999, 2000, 2001, 2002, 2004, 2006, 2009 Free Software Foundation, Inc.
+// Copyright (C) 1998, 1999, 2000, 2001, 2002, 2004, 2006, 2009, 2014 Free Software Foundation, Inc.
 //
 // This program is free software; you can redistribute it and/or modify     
 // it under the terms of the GNU General Public License as published by     
